# teampulse

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  digest.py  kudos.py  pulse.py  reports.py  router.py  standup.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/graphql/: __init__.py  dataloaders.py  schema.py
backend/app/models/: __init__.py  base.py  kudos.py  pulse.py  standup.py  user.py
backend/app/schemas/: auth.py  kudos.py  pulse.py  report.py  standup.py  user.py
backend/app/services/: digest_service.py  kudos_broadcaster.py  kudos_service.py  notification_service.py  pulse_service.py  report_service.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 0001_kudos_category_check.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_kudos_injection.py  test_pulse_idor.py  test_reports.py
web/: README.md  package-lock.json  package.json  tailwind.config.ts
web/app/: layout.tsx  page.tsx
web/app/kudos/: page.tsx
web/app/pulse/: page.tsx
web/app/standup/: page.tsx
web/lib/: api.ts
